feat(core): unhealthy huge update
